--- a/styles.css
+++ b/styles.css
@@ -320,9 +320,9 @@ body {
 }
 
 .solar-subtitle {
-  font-size: 16px;
-  color: #94a3b8;
-  margin-bottom: 25px;
+  font-size: 24px;
+  color: #e4edf9;
+  margin-bottom: 50px;
 }
 
 .solar-3d-wrapper {
@@ -496,3 +496,4 @@ body {
     height: 88vw;
   }
 }
+
